Led blinking and Version based update