@@ -1,5 +1,7 @@
 package com.esp32.securiteIOT;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
@@ -8,107 +10,143 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
+import java.security.MessageDigest;
 import java.security.PrivateKey;
 import java.security.Signature;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.util.Base64;
 
-import java.io.*;
-import java.nio.charset.StandardCharsets;
-import java.security.MessageDigest;
-
 @RestController
+@RequestMapping("/ota")
 public class OtaController {
-    
-    private static final String FIRMWARE_PATH = "firmware/firmware.enc";
+
+    private static final String FIRMWARE_ENC_PATH = "firmware/firmware.enc";
+    private static final String FIRMWARE_BIN_PATH = "firmware/firmware.bin";
     private static final String VERSION_PATH = "firmware/version.txt";
 
-    // --------------------------
-    // HELPER: read version file
-    // --------------------------
-    private String readVersion() {
-        File f = new File(VERSION_PATH);
-        if (!f.exists()) return "1.0";
+    private static final Logger logger = LoggerFactory.getLogger(OtaController.class);
+
+    // AES key & IV (not used here for signing) — keep for reference
+    @Value("${ota.aes.key}")
+    private String aesKeyHex;
+
+    @Value("${ota.aes.iv}")
+    private String aesIvHex;
+
+    private static byte[] hexStringToByteArray(String s) {
+        if (s.length() % 2 != 0) throw new IllegalArgumentException("Hex string must have even length");
+        int len = s.length();
+        byte[] data = new byte[len/2];
+        for (int i=0;i<len;i+=2) data[i/2] = (byte)((Character.digit(s.charAt(i),16)<<4) + Character.digit(s.charAt(i+1),16));
+        return data;
+    }
+
+    private PrivateKey loadPrivateKey() throws Exception {
+        InputStream is = getClass().getClassLoader().getResourceAsStream("new_private.pem");
+        if (is == null) {
+            logger.error("Private key not found in resources");
+            throw new FileNotFoundException("new_private.pem not found");
+        }
+        byte[] keyBytes = is.readAllBytes();
+        String pem = new String(keyBytes, StandardCharsets.UTF_8)
+                .replaceAll("-----BEGIN PRIVATE KEY-----", "")
+                .replaceAll("-----END PRIVATE KEY-----", "")
+                .replaceAll("\\s+","");
+        byte[] decoded = Base64.getDecoder().decode(pem);
+        PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(decoded);
+        return KeyFactory.getInstance("RSA").generatePrivate(spec);
+    }
+
+    /**
+     * Handles the version check request from the device.
+     * Reads the version string from firmware/version.txt and returns it as plain text.
+     */
+    @GetMapping("/version")
+    public ResponseEntity<String> getFirmwareVersion() {
+        Path path = Paths.get(VERSION_PATH);
+        if (!Files.exists(path)) {
+            logger.warn("Version file not found: {}", VERSION_PATH);
+            return ResponseEntity.notFound().build();
+        }
+
         try {
-            return new String(java.nio.file.Files.readAllBytes(f.toPath()), StandardCharsets.UTF_8).trim();
+            String version = Files.readString(path, StandardCharsets.UTF_8).trim();
+            logger.info("Serving version: {}", version);
+            return ResponseEntity.ok()
+                    .contentType(MediaType.TEXT_PLAIN)
+                    .body(version);
+        } catch (IOException e) {
+            logger.error("Error reading version file", e);
+            return ResponseEntity.internalServerError().build();
+        }
+    }
+
+    @GetMapping("/firmware")
+    public ResponseEntity<Resource> getEncryptedFirmware() {
+        try {
+            File enc = new File(FIRMWARE_ENC_PATH);
+            File bin = new File(FIRMWARE_BIN_PATH);
+            if (!enc.exists()) return ResponseEntity.notFound().build();
+            if (!bin.exists()) logger.warn("Plain firmware (for signature size) not found: {}", FIRMWARE_BIN_PATH);
+
+            InputStreamResource resource = new InputStreamResource(new FileInputStream(enc));
+            long encLen = enc.length();
+            long plainLen = bin.exists() ? bin.length() : -1;
+
+            return ResponseEntity.ok()
+                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=firmware.enc")
+                    .contentLength(encLen)
+                    .header("X-Plain-Size", String.valueOf(plainLen))
+                    .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                    .body(resource);
+
         } catch (Exception e) {
-            return "1.0";
+            logger.error("Error serving firmware", e);
+            return ResponseEntity.internalServerError().build();
         }
     }
 
-    // --------------------------
-    // PUBLIC: ESP32 uses this WITHOUT KEY
-    // --------------------------
-    @GetMapping("/ota/version")
-    public ResponseEntity<String> getVersion(
-            @RequestParam(name = "current", required = false) String currentVersion) {
-
-        String serverVersion = readVersion();
-
-        if (currentVersion == null) {
-            return ResponseEntity.badRequest().body("Missing current version");
-        }
-
-        if (currentVersion.trim().equals(serverVersion.trim())) {
-            return ResponseEntity.ok("UP_TO_DATE");
-        }
-
-        return ResponseEntity.ok(serverVersion);
-    }
-
-    // --------------------------
-    // PROTECTED: /ota/firmware
-    // --------------------------
-    @GetMapping("/ota/firmware")
-    public ResponseEntity<Resource> getFirmware() throws IOException {
-        File file = new File(FIRMWARE_PATH);
-        if (!file.exists()) return ResponseEntity.notFound().build();
-
-        InputStreamResource resource = new InputStreamResource(new FileInputStream(file));
-
-        return ResponseEntity.ok()
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=firmware.bin")
-                .contentLength(file.length())
-                .contentType(MediaType.APPLICATION_OCTET_STREAM)
-                .body(resource);
-    }
-
-    private PrivateKey loadPrivateKey(String filePath) throws Exception {
-        String key = new String(Files.readAllBytes(Paths.get(filePath)))
-                .replaceAll("-----\\w+ PRIVATE KEY-----", "")
-                .replaceAll("\\s", "");
-        byte[] keyBytes = Base64.getDecoder().decode(key);
-        PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(keyBytes);
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return kf.generatePrivate(spec);
-    }
-    // --------------------------
-    // PROTECTED: /ota/signature
-    // --------------------------
-    @GetMapping("/ota/signature")
+    @GetMapping("/signature")
     public ResponseEntity<String> getSignature() {
         try {
-            File fw = new File(FIRMWARE_PATH);
-            if (!fw.exists()) return ResponseEntity.notFound().build();
+            File bin = new File(FIRMWARE_BIN_PATH);
+            if (!bin.exists()) {
+                logger.warn("Plain firmware not found for signing: {}", FIRMWARE_BIN_PATH);
+                return ResponseEntity.notFound().build();
+            }
 
-            byte[] firmwareBytes = Files.readAllBytes(fw.toPath());
+            PrivateKey pk = loadPrivateKey();
+
+            // Read plain firmware bytes and compute signature over plain bytes (not over the encrypted file)
+            byte[] binBytes = Files.readAllBytes(bin.toPath());
+
+            MessageDigest md = MessageDigest.getInstance("SHA-256");
+            byte[] hash = md.digest(binBytes);
+            logger.info("Signing firmware, SHA256: {}", bytesToHex(hash));
 
             Signature signature = Signature.getInstance("SHA256withRSA");
-            PrivateKey privateKey = loadPrivateKey("PrivateKey/private.pem"); // path inside your project
-            signature.initSign(privateKey);
-            signature.update(firmwareBytes);
-
+            signature.initSign(pk);
+            signature.update(binBytes); // IMPORTANT: pass plaintext bytes
             byte[] sigBytes = signature.sign();
+
             String base64Sig = Base64.getEncoder().encodeToString(sigBytes);
-
             return ResponseEntity.ok(base64Sig);
-
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.internalServerError().body("");
+            logger.error("Error generating signature", e);
+            return ResponseEntity.internalServerError().body(e.getMessage());
         }
+    }
+
+    // utility hex printer for logs
+    private static String bytesToHex(byte[] bytes) {
+        StringBuilder sb = new StringBuilder();
+        for (byte b : bytes) sb.append(String.format("%02x", b));
+        return sb.toString();
     }
 }
